--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,11 +1,11 @@
 name: fingerprint
 description: "A new Flutter project."
-version: 0.0.1
-homepage:
+version: 1.0.0+1
+homepage: https://github.com/phucdang6595/finger-print-plugin
 
 environment:
   sdk: ^3.7.2
-  flutter: '>=3.3.0'
+  flutter: ">=3.3.0"
 
 dependencies:
   flutter:
@@ -14,6 +14,7 @@ dependencies:
     sdk: flutter
   web: ^1.0.0
   plugin_platform_interface: ^2.0.2
+  device_info_plus: ^11.3.0
 
 dev_dependencies:
   flutter_test:
